--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 				<a href="index.html" class="header-scroll-logo"><img src="i/logo.svg"></a>
 				<div class="header-nav">
 					<ul>
-						<li><a href="#">Пицца</a></li>
-						<li><a href="#">Супы</a></li>
-						<li><a href="#">Горячие закуски</a></li>
-						<li><a href="#">Салаты и холодные закуски</a></li>
-						<li><a href="#">Десерты</a></li>
-						<li><a href="#">Напитки</a></li>
-						<li><a href="#">Вина</a></li>
+						<li><a href="#pizza" class="scroll-btn">Пицца</a></li>
+						<li><a href="#soup" class="scroll-btn">Супы</a></li>
+						<li><a href="#" class="scroll-btn">Горячие закуски</a></li>
+						<li><a href="#" class="scroll-btn">Салаты и холодные закуски</a></li>
+						<li><a href="#" class="scroll-btn">Десерты</a></li>
+						<li><a href="#water" class="scroll-btn">Напитки</a></li>
+						<li><a href="#wine" class="scroll-btn">Вина</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Пиццерия</a></li>
 						<li><a href="#">Контакты</a></li>
@@ -67,13 +67,13 @@
 				<a href="#" class="header-logo"><img src="i/logo.png"></a>
 				<div class="header-nav">
 					<ul>
-						<li><a href="#">Пицца</a></li>
-						<li><a href="#">Супы</a></li>
-						<li><a href="#">Горячие закуски</a></li>
-						<li><a href="#">Салаты и холодные закуски</a></li>
-						<li><a href="#">Десерты</a></li>
-						<li><a href="#">Напитки</a></li>
-						<li><a href="#">Вина</a></li>
+						<li><a href="#pizza" class="scroll-btn">Пицца</a></li>
+						<li><a href="#soup" class="scroll-btn">Супы</a></li>
+						<li><a href="#" class="scroll-btn">Горячие закуски</a></li>
+						<li><a href="#" class="scroll-btn">Салаты и холодные закуски</a></li>
+						<li><a href="#" class="scroll-btn">Десерты</a></li>
+						<li><a href="#water" class="scroll-btn">Напитки</a></li>
+						<li><a href="#wine" class="scroll-btn">Вина</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Пиццерия</a></li>
 						<li><a href="#">Контакты</a></li>
@@ -111,7 +111,7 @@
 	</div>
 
 	<div class="b-3">
-		<div class="b-block">
+		<div class="b-block" id="pizza">
 			<h2>Пицца</h2>
 			<ul class="b-3-list">
 				<li><span><img src="i/i-b-3-i-1.png">Тонкое итальянское тесто</span></li>
@@ -193,7 +193,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="b-block">
+		<div class="b-block" id="soup">
 			<h2>Супы</h2>
 			<ul class="b-3-list">
 				<li><span><img src="i/i-b-3-i-4.png">Насыщенный бульон</span></li>
@@ -271,7 +271,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="b-block">
+		<div class="b-block" id="water">
 			<h2>Напитки</h2>
 			<ul class="b-3-list">
 				<li><span><img src="i/i-b-3-i-5.png">Натуральные составляющие</span></li>
@@ -345,7 +345,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="b-block">
+		<div class="b-block" id="wine">
 			<h2>Вино</h2>
 			<ul class="b-3-list">
 				<li><span><img src="i/i-b-3-i-6.png">Коллекционные сорта</span></li>
@@ -428,7 +428,7 @@
 			<div class="footer-nav">
 				<div class="wrap">
 					<ul>
-						<li>Каталог</li>
+						<li><a href="#">Каталог</a></li>
 						<li><a href="#">Пицца</a></li>
 						<li><a href="#">Супы</a></li>
 						<li><a href="#">Горячие закуски</a></li>
@@ -438,13 +438,13 @@
 						<li><a href="#">Вино</a></li>
 					</ul>
 					<ul>
-						<li>Доставка</li>
+						<li><a href="#">Доставка</a></li>
 						<li><a href="#">Условия доставки</a></li>
 						<li><a href="#">Доставка по районам</a></li>
 						<li><a href="#">Доставка до станции метро</a></li>
 					</ul>
 					<ul>
-						<li>О компании</li>
+						<li><a href="#">О компании</a></li>
 						<li><a href="#">Новости</a></li>
 						<li><a href="#">Пиццерия</a></li>
 						<li><a href="#">Контакты</a></li>
