--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 					<ul>
 						<li><a href="#pizza" class="scroll-btn">Пицца</a></li>
 						<li><a href="#soup" class="scroll-btn">Супы</a></li>
-						<li><a href="#" class="scroll-btn">Горячие закуски</a></li>
-						<li><a href="#" class="scroll-btn">Салаты и холодные закуски</a></li>
-						<li><a href="#" class="scroll-btn">Десерты</a></li>
+						<li><a href="#hot" class="scroll-btn">Горячие закуски</a></li>
+						<li><a href="#salat" class="scroll-btn">Салаты и холодные закуски</a></li>
+						<li><a href="#desert" class="scroll-btn">Десерты</a></li>
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
 						<li><a href="#">Новости</a></li>
@@ -69,9 +69,9 @@
 					<ul>
 						<li><a href="#pizza" class="scroll-btn">Пицца</a></li>
 						<li><a href="#soup" class="scroll-btn">Супы</a></li>
-						<li><a href="#" class="scroll-btn">Горячие закуски</a></li>
-						<li><a href="#" class="scroll-btn">Салаты и холодные закуски</a></li>
-						<li><a href="#" class="scroll-btn">Десерты</a></li>
+						<li><a href="#hot" class="scroll-btn">Горячие закуски</a></li>
+						<li><a href="#salat" class="scroll-btn">Салаты и холодные закуски</a></li>
+						<li><a href="#desert" class="scroll-btn">Десерты</a></li>
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
 						<li><a href="#">Новости</a></li>
@@ -195,6 +195,240 @@
 		</div>
 		<div class="b-block" id="soup">
 			<h2>Супы</h2>
+			<ul class="b-3-list">
+				<li><span><img src="i/i-b-3-i-4.png">Насыщенный бульон</span></li>
+				<li><span><img src="i/i-b-3-i-4.png">Отборные ингредиенты</span></li>
+				<li><span><img src="i/i-b-3-i-4.png">Без полуфабрикатов</span></li>
+			</ul>
+			<ul class="catalog">
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div class="b-block" id="hot">
+			<h2>Горячие закуски</h2>
+			<ul class="b-3-list">
+				<li><span><img src="i/i-b-3-i-4.png">Насыщенный бульон</span></li>
+				<li><span><img src="i/i-b-3-i-4.png">Отборные ингредиенты</span></li>
+				<li><span><img src="i/i-b-3-i-4.png">Без полуфабрикатов</span></li>
+			</ul>
+			<ul class="catalog">
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div class="b-block" id="salat">
+			<h2>Салаты и холодные закуски</h2>
+			<ul class="b-3-list">
+				<li><span><img src="i/i-b-3-i-4.png">Насыщенный бульон</span></li>
+				<li><span><img src="i/i-b-3-i-4.png">Отборные ингредиенты</span></li>
+				<li><span><img src="i/i-b-3-i-4.png">Без полуфабрикатов</span></li>
+			</ul>
+			<ul class="catalog">
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+				<li>
+					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="text">
+						<div class="name">Суп пюре с белыми грибами</div>
+						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
+						<div class="more-i"><img src="i/more-icon.png"></div>
+					</div>
+					<div class="col">
+						<div class="less"></div>
+						<p>0</p>
+						<div class="more"></div>
+					</div>
+					<div class="price-wrap">
+						<div class="price"><span>544</span> Руб.</div>
+						<a href="#" class="add-btn">В корзину</a>
+					</div>
+				</li>
+			</ul>
+		</div>
+		<div class="b-block" id="desert">
+			<h2>Десерты</h2>
 			<ul class="b-3-list">
 				<li><span><img src="i/i-b-3-i-4.png">Насыщенный бульон</span></li>
 				<li><span><img src="i/i-b-3-i-4.png">Отборные ингредиенты</span></li>
