--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<li><a href="#water" class="scroll-btn">Напитки</a></li>
 						<li><a href="#wine" class="scroll-btn">Вина</a></li>
 						<li><a href="#">Новости</a></li>
-						<li><a href="#">Пиццерия</a></li>
+						<li><a href="pizzaria.html">Пиццерия</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</div>
