--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 			</ul>
 			<ul class="catalog">
 				<li>
-					<div class="image"><img src="i/pizza.jpg"></div>
+					<div class="image"><a href="#popup-pizza" class="fancybox"><img src="i/pizza.jpg"></a></div>
 					<div class="text">
 						<div class="name">Пицца 4 сыра</div>
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-pizza" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="add-ingr">Добавить ингредиенты</div>
 					<div class="col">
@@ -138,11 +138,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/pizza.jpg"></div>
+					<div class="image"><a href="#popup-pizza" class="fancybox"><img src="i/pizza.jpg"></a></div>
 					<div class="text">
 						<div class="name">Пицца 4 сыра</div>
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-pizza" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="add-ingr">Добавить ингредиенты</div>
 					<div class="col">
@@ -156,11 +156,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/pizza.jpg"></div>
+					<div class="image"><a href="#popup-pizza" class="fancybox"><img src="i/pizza.jpg"></a></div>
 					<div class="text">
 						<div class="name">Пицца 4 сыра</div>
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-pizza" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="add-ingr">Добавить ингредиенты</div>
 					<div class="col">
@@ -174,11 +174,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/pizza.jpg"></div>
+					<div class="image"><a href="#popup-pizza" class="fancybox"><img src="i/pizza.jpg"></a></div>
 					<div class="text">
 						<div class="name">Пицца 4 сыра</div>
 						<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-pizza" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="add-ingr">Добавить ингредиенты</div>
 					<div class="col">
@@ -202,11 +202,11 @@
 			</ul>
 			<ul class="catalog">
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -219,11 +219,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -236,11 +236,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -253,11 +253,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -280,11 +280,11 @@
 			</ul>
 			<ul class="catalog">
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -297,11 +297,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -314,11 +314,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -331,11 +331,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -358,11 +358,11 @@
 			</ul>
 			<ul class="catalog">
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -375,11 +375,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -392,11 +392,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -409,11 +409,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -436,11 +436,11 @@
 			</ul>
 			<ul class="catalog">
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -453,11 +453,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -470,11 +470,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -487,11 +487,11 @@
 					</div>
 				</li>
 				<li>
-					<div class="image"><img src="i/soup.jpg"></div>
+					<div class="image"><a href="#popup-soup" class="fancybox"><img src="i/soup.jpg"></a></div>
 					<div class="text">
 						<div class="name">Суп пюре с белыми грибами</div>
 						<p>Сливки, картофель, белые грибы, зелень, сливочное масло, специи.</p>
-						<div class="more-i"><img src="i/more-icon.png"></div>
+						<a href="#popup-soup" class="more-i fancybox"><img src="i/more-icon.png"></a>
 					</div>
 					<div class="col">
 						<div class="less"></div>
@@ -588,36 +588,36 @@
 			</ul>
 			<ul class="catalog">
 				<li>
-					<div class="image"><img src="i/wine.jpg"></div>
+					<div class="image"><a href="#popup-wine" class="fancybox"><img src="i/wine.jpg"></a></div>
 					<div class="text">
 						<div class="name">Black Label</div>
 						<p>Каберне-савиньон, красное, полусладкое, 11об.</p>
 					</div>
-					<a href="#" class="more-btn">Узнать больше</a>
+					<a href="#popup-wine" class="more-btn fancybox">Узнать больше</a>
 				</li>
 				<li>
-					<div class="image"><img src="i/wine.jpg"></div>
+					<div class="image"><a href="#popup-wine" class="fancybox"><img src="i/wine.jpg"></a></div>
 					<div class="text">
 						<div class="name">Black Label</div>
 						<p>Каберне-савиньон, красное, полусладкое, 11об.</p>
 					</div>
-					<a href="#" class="more-btn">Узнать больше</a>
+					<a href="#popup-wine" class="more-btn fancybox">Узнать больше</a>
 				</li>
 				<li>
-					<div class="image"><img src="i/wine.jpg"></div>
+					<div class="image"><a href="#popup-wine" class="fancybox"><img src="i/wine.jpg"></a></div>
 					<div class="text">
 						<div class="name">Black Label</div>
 						<p>Каберне-савиньон, красное, полусладкое, 11об.</p>
 					</div>
-					<a href="#" class="more-btn">Узнать больше</a>
+					<a href="#popup-wine" class="more-btn fancybox">Узнать больше</a>
 				</li>
 				<li>
-					<div class="image"><img src="i/wine.jpg"></div>
+					<div class="image"><a href="#popup-wine" class="fancybox"><img src="i/wine.jpg"></a></div>
 					<div class="text">
 						<div class="name">Black Label</div>
 						<p>Каберне-савиньон, красное, полусладкое, 11об.</p>
 					</div>
-					<a href="#" class="more-btn">Узнать больше</a>
+					<a href="#popup-wine" class="more-btn fancybox">Узнать больше</a>
 				</li>
 			</ul>
 		</div>
@@ -656,7 +656,7 @@
 	<div class="b footer">
 		<div class="b-block">
 			<div class="footer-logo">
-				<a href="index.html" class="logo-a"><img src="i/logo.png"></a>
+				<a href="index.html" class="logo-a"><img src="i/logo-footer.png"></a>
 				<p>www.tomatino.ru (c) 2019<br> Все права защищены</p>
 			</div>
 			<div class="footer-nav">
