--- a/pizzaria.html
+++ b/pizzaria.html
@@ -91,7 +91,7 @@
 	<div class="b b-1">
 		<div class="b-block">
 			<div class="b-1-wrap">
-				<h1>приглашаем вас посетить<br> <span>итальянский ресторан</span><br> с доступными ценами</h1>
+				<h1>приглашаем посетить<br> нашу пиццерию</h1>
 			</div>
 		</div>
 	</div>
@@ -104,13 +104,13 @@
 				<li>ул. Тверская, 9</li>
 				<li>ул. Тверская, 11</li>
 			</ul>
-			<p class="b-2-text">ул. Тверская, 7<br> <a href="tel: +79000000000">8 (900) 000 00 00</a></p>
+			<p class="b-2-text">г. Москва, ул. Вавилова, 64/1, стр. 1, Черёмушкинский рынок<br> <a href="tel: +79000000000">8 (900) 000 00 00</a></p>
 			<ul class="info-list">
 				<li>
 					<p><img src="i/info-1.png">Средний чек:<br><span>800 рублей</span></p>
 				</li>
 				<li>
-					<p><img src="i/info-2.png">Станция метро:<br><span>Тверская</span></p>
+					<p><img src="i/info-2.png">Станция метро:<br><span>Прафсоюзная</span><br><span>Университет</span></p>
 				</li>
 				<li>
 					<p><img src="i/info-3.png">Режим работы:<br><span>с 9:00 до 24:00</span></p>
@@ -150,7 +150,7 @@
 	<div class="b footer">
 		<div class="b-block">
 			<div class="footer-logo">
-				<a href="index.html" class="logo-a"><img src="i/logo.png"></a>
+				<a href="index.html" class="logo-a"><img src="i/logo-footer.png"></a>
 				<p>www.tomatino.ru (c) 2019<br> Все права защищены</p>
 			</div>
 			<div class="footer-nav">
