--- a/pizzaria.html
+++ b/pizzaria.html
@@ -91,7 +91,7 @@
 	<div class="b b-1">
 		<div class="b-block">
 			<div class="b-1-wrap">
-				<h1>приглашаем посетить<br> нашу пиццерию</h1>
+				<h1>приглашаем посетить<br> <span>нашу пиццерию</span></h1>
 			</div>
 		</div>
 	</div>
@@ -110,7 +110,7 @@
 					<p><img src="i/info-1.png">Средний чек:<br><span>800 рублей</span></p>
 				</li>
 				<li>
-					<p><img src="i/info-2.png">Станция метро:<br><span>Прафсоюзная</span><br><span>Университет</span></p>
+					<p><img src="i/info-2.png">Станция метро:<br><span>Профсоюзная</span><br><span>Университет</span></p>
 				</li>
 				<li>
 					<p><img src="i/info-3.png">Режим работы:<br><span>с 9:00 до 24:00</span></p>
