--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="header-basket">
 					<span>999 Руб.</span>
-					<a href="#popup-wine" class="fancybox">Корзина</a>
+					<a href="#">Корзина</a>
 				</div>
 			</div>
 			<div class="mobile-btn">
@@ -106,6 +106,7 @@
 	<div class="b b-2">
 		<div class="b-block">
 			<div class="b-2-text">Дизайн интерьера в стиле Mid-century modern с аллюзиями на европейские траттории и брассери послевоенных лет. В отделке используются терракота, латунь, мрамор. Такой интерьер создает ощущение, что ресторан был здесь всегда.</div>
+			<div class="b-2-border"></div>
 			<div class="b-2-image"><img src="i/i-b-2.png"></div>
 		</div>
 	</div>
