--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 	<div style="display:none;">
 		<div class="popup" id="popup-pizza">
 			<div class="popup-wrap">
-				<div class="image"><img src="i/pizza.jpg"></div>
+				<div class="image"><img src="i/pizza-big.png"></div>
 				<div class="text">
 					<div class="name">Пицца «4 сыра»</div>
 					<p>Ассорти из четырех видов сыра: Моцарелла, Чеддер, Дор-блю, Пармезан, орегано, базилик, соус.</p>
