--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 					<p><span>с 9:00 до 22:00</span><br>ежедневно</p>
 					<a href="#" class="header-btn">Личный кабинет</a>
 				</div>
+				<div class="header-top-order">
+					<ul>
+						<li class="active">1.Подтверждение</li>
+						<li>2.Оформление</li>
+						<li>3.Заказ готовится!</li>
+					</ul>
+				</div>
 			</div>
 			<div class="header-bottom clearfix">
 				<a href="index.html" class="header-scroll-logo"><img src="i/logo.svg"></a>
