--- a/order-1.html
+++ b/order-1.html
@@ -95,6 +95,8 @@
 		</div>
 	</div>
 
+	<a href="index.html" class="header-back-btn">Вернуться на главную</a>
+
 	<div class="b b-1">
 		<div class="b-block">
 			<h1>Корзина</h1>
@@ -105,7 +107,7 @@
 				</form>
 			</div>
 			<div class="title">Ваш заказ</div>
-			<ul class="order-list">
+			<ul class="order-list" id="order-list">
 				<!--<li>
 					<div class="left-part">
 						<div class="name">Пицца «4 сыра»</div>
