--- a/order-2.html
+++ b/order-2.html
@@ -95,6 +95,8 @@
 		</div>
 	</div>
 
+	<a href="index.html" class="header-back-btn">Вернуться на главную</a>
+
 	<div class="b b-1">
 		<div class="b-block">
 			<h1>Оформление</h1>
