--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@
 		</div>
 	</div>
 
+	<a href="index.html" class="header-back-btn">Вернуться на главную</a>
+
 	<div class="b b-1">
 		<div class="b-1-slider">
 			<div class="b-1-slide">
