--- a/pizzaria.html
+++ b/pizzaria.html
@@ -104,7 +104,7 @@
 				<li>ул. Тверская, 9</li>
 				<li>ул. Тверская, 11</li>
 			</ul>
-			<p class="b-2-text">г. Москва, ул. Вавилова, 64/1, стр. 1, Черёмушкинский рынок<br> <a href="tel: +79000000000">8 (900) 000 00 00</a></p>
+			<p class="b-2-text"><a href="tel: +79000000000">8 (900) 000 00 00</a><br><span>г. Москва, ул. Вавилова, 64/1, стр. 1, Черёмушкинский рынок</span></p>
 			<ul class="info-list">
 				<li>
 					<p><img src="i/info-1.png">Средний чек:<br><span>800 рублей</span></p>
